oci_cluster/thanos-query/thanos-query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-query
  namespace: monitoring
  labels:
    app: thanos-query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-query
  template:
    metadata:
      labels:
        app: thanos-query
    spec:
      containers:
      - name: thanos-query
        image: rhoribe/thanos-arm64:latest
        command: ["thanos"]
        args:
        - query
        - --log.level=debug
        - --query.replica-label=replica
        - --store.sd-files=/etc/thanos/query.yaml
        - --alert.query-url=alertmanager.monitoring.svc:9093
        volumeMounts:
         - name: thanos-query-targets
           mountPath: /etc/thanos/
        ports:
        - name: http
          containerPort: 10902
        - name: grpc
          containerPort: 10901
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 100m
            memory: 512Mi
        livenessProbe:
          httpGet:
            port: http
            path: /-/healthy
        readinessProbe:
          httpGet:
            port: http
            path: /-/ready
      volumes:
        - name: thanos-query-targets
          configMap:
            defaultMode: 420
            name: thanos-query
