oci_cluster/thanos-query/thanos-query-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-query
  name: thanos-query
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - port: 10902
    protocol: TCP
    targetPort: 10902
    name: http
  selector:
    app: thanos-query
