oci_cluster/thanos-query/thanos-query-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thanos-query
  namespace: monitoring
spec:
  hosts:
  - "thanos.horibe.com.br"
  gateways:
  - default-ingress.default
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 10902
        host: thanos-query
